--- a/SAM/Views/Shared/Partials/_Navigation.cshtml
+++ b/SAM/Views/Shared/Partials/_Navigation.cshtml
@@ -184,6 +184,12 @@
                 </button>
                 <ul class="nav-dropdown" id="dropdown-administration" role="menu">
                     <li class="nav-item" role="none">
+                        <a class="nav-link" asp-controller="UserManagement" asp-action="CompanyRequests" role="menuitem" data-tooltip="Company Requests">
+                            <i class="bi bi-building-add"></i>
+                            <span class="nav-link-text">Company Requests</span>
+                        </a>
+                    </li>
+                    <li class="nav-item" role="none">
                         <a class="nav-link" asp-controller="UserManagement" asp-action="AdminRequests" role="menuitem" data-tooltip="Admin Requests">
                             <i class="bi bi-shield-check"></i>
                             <span class="nav-link-text">Admin Requests</span>
