--- a/SAM/Views/_ViewImports.cshtml
+++ b/SAM/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using SAM.ViewModels.Reports
 @using SAM.ViewModels.UserManagement
 @using SAM.ViewModels.Dashboard
+@using SAM.ViewModels.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
